<resources>
    <string name="app_name">Socialy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_n_get_started">Let\'s \nGet Started</string>
    <string name="everything_start_from_here">Everything start from here</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="create_account">Create account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="arrow_back">Arrow back</string>
    <string name="next">Next</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="create_your_account">Create your account</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="send">Send</string>
</resources>